# mangamin

./: .gitignore  README.md  pyproject.toml
mangamin/: __init__.py  __main__.py  cli.py  utils.py
